# ZebraCHOP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  chopchop.py  chopchop_query.py  config.json  pyproject.toml  reformat.py  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
conda-recipes/: meta.yaml
frontend/: index.html  main.py  requirements.txt  run.sh
results/: rx3.tsv  tbx16.tsv  tbxta.tsv
tests/: test_frontend.py
