[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zebrachop"
version = "1.0.1"
description = "CRISPR gRNA design for zebrafish with Ensembl-aware filtering — Python 3 frontend wrapping the CHOPCHOP engine."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Abhinav Bachu" }]
requires-python = ">=3.9"
keywords = ["bioinformatics", "CRISPR", "gRNA", "zebrafish", "chopchop", "Cas9"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "pre-commit>=3",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/abachu2005/ZebraCHOP"
Repository = "https://github.com/abachu2005/ZebraCHOP"
Issues = "https://github.com/abachu2005/ZebraCHOP/issues"
Changelog = "https://github.com/abachu2005/ZebraCHOP/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["frontend"]
include-package-data = true

[tool.setuptools.package-data]
frontend = ["*.html"]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["chopchop.py", "chopchop_query.py", "featurization.py", "reformat.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "B008", "E741"]

[tool.ruff.lint.per-file-ignores]
"frontend/main.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
